[gd_scene load_steps=8 format=3 uid="uid://4cao7j31ny5t"]

[ext_resource type="Script" path="res://Scene oggetti/Cancello chiuso.gd" id="1_v6hjm"]
[ext_resource type="Texture2D" uid="uid://ehgn540cfv1q" path="res://Assets/Oggetti di scena fisici/Muri/Muro con porta aperta/Muro con porta apera.png" id="2_ex4q7"]
[ext_resource type="Texture2D" uid="uid://dc3sq5iqpwglv" path="res://Assets/Oggetti di scena fisici/Muri/Muro normale/Muro.png" id="3_xxwt0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dkhsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ex4q7")
}],
"loop": false,
"name": &"Aperta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xxwt0")
}],
"loop": false,
"name": &"Chiusa",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcp5k"]
size = Vector2(21, 110)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wprlm"]
size = Vector2(8.42221, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6fio"]
size = Vector2(24, 110)

[node name="Cancello" type="StaticBody2D"]
script = ExtResource("1_v6hjm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-8, 1)
scale = Vector2(0.277, 0.4)
sprite_frames = SubResource("SpriteFrames_dkhsk")
animation = &"Chiusa"
autoplay = "Chiusa"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10.5, 0)
shape = SubResource("RectangleShape2D_lcp5k")

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(-28.5, 0)
scale = Vector2(3.20581, 5.50724)
shape = SubResource("RectangleShape2D_wprlm")

[node name="Label" type="Label" parent="Node2D"]
visible = false
offset_left = -134.0
offset_top = -48.0
offset_right = 70.0
offset_bottom = -22.0
text = "Premi F per aprire la porta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Node2D"]
visible = false
offset_left = -144.0
offset_top = -48.0
offset_right = 82.0
offset_bottom = -22.0
text = "Premi F per chiudere la porta"

[node name="Area2D2" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D2"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_k6fio")

[node name="Label2" type="Label" parent="Node2D"]
visible = false
offset_left = -74.0
offset_top = -49.0
offset_right = 152.0
offset_bottom = -23.0
text = "Premi F per chiudere la porta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Node2D"]
visible = false
offset_left = -79.0
offset_top = -48.0
offset_right = 125.0
offset_bottom = -22.0
text = "Premi F per aprire la porta"

[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D2" to="." method="_on_area_2d_2_body_exited"]
